@@ -10,7 +10,7 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>193</integer>
+		<integer>6</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9F33</string>
